# paper

./: Cargo.toml
orderbook/: Cargo.toml  README.md
orderbook/src/: lib.rs
orderbook/src/guid/: domain.rs  mod.rs  order_queues.rs  orderbook.rs  orders.rs  validation.rs
orderbook/src/sequential/: domain.rs  orderbook.rs
